[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/environment/icon.png" type="Texture" id=1]
[ext_resource path="res://scene/Train/Turrets/Shooter/Projectiles/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/soundEffects/FireBullet.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/soundEffects/RatDeath.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Bullet" type="Area2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 30, 0 )

[node name="Position2D2" type="Position2D" parent="."]

[node name="Trace" type="CPUParticles2D" parent="."]
rotation = 1.5708
amount = 20
lifetime = 2.0
preprocess = 27.52
speed_scale = 2.0
randomness = 0.18
lifetime_randomness = 0.31
emission_shape = 1
emission_sphere_radius = 15.0
spread = 43.35
angular_velocity = -720.0
scale_amount = 4.0

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Bullets"

[node name="MouseDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
